# ragcheck

./: .gitignore  CHANGELOG.md  README.md  ROUND_LOG.md  pyproject.toml
ragcheck/: __init__.py  __main__.py  bench.py  chunkers.py  cli.py  corpus.py  diagnostics.py  diff.py  embedders.py  metrics.py  report.py  runner.py  synth.py
ragcheck/fixtures/: __init__.py
ragcheck/fixtures/beir_fiqa/: gold.json
ragcheck/fixtures/beir_fiqa/corpus/: doc_401k.txt  doc_bond_basics.txt  doc_credit_score.txt  doc_dividends.txt  doc_etf.txt  doc_inflation.txt  doc_interest_rate.txt  doc_options.txt
ragcheck/fixtures/ms_marco/: gold.json
ragcheck/fixtures/ms_marco/corpus/: p_docker.txt  p_git.txt  p_http.txt  p_kubernetes.txt  p_python.txt  p_tcp.txt
ragcheck/fixtures/needle_haystack/: __init__.py  gold.json
ragcheck/fixtures/needle_haystack/corpus/: haystack_000.txt  haystack_001.txt  haystack_002.txt  haystack_003.txt  haystack_004.txt  haystack_005.txt  haystack_006.txt  haystack_007.txt  haystack_008.txt  haystack_009.txt  haystack_010.txt  haystack_011.txt  haystack_012.txt  haystack_013.txt  haystack_014.txt  haystack_015.txt  haystack_016.txt  haystack_017.txt  haystack_018.txt  haystack_019.txt  haystack_020.txt  haystack_021.txt  haystack_022.txt  haystack_023.txt  haystack_024.txt  haystack_025.txt  haystack_026.txt  haystack_027.txt  haystack_028.txt  haystack_029.txt  haystack_030.txt  haystack_031.txt  haystack_032.txt  haystack_033.txt  haystack_034.txt  haystack_035.txt  haystack_036.txt  haystack_037.txt  haystack_038.txt  haystack_039.txt  (+38 more)
tests/: conftest.py  test_bench.py  test_chunkers.py  test_cli.py  test_corpus.py  test_diagnostics.py  test_diff.py  test_doc_drift.py  test_embedders.py  test_integration.py  test_metrics.py  test_report.py  test_runner.py  test_synth.py
